05-Test1/test/results.txt
test_p1 (__main__.Test.test_p1) ... ok
test_p2 (__main__.Test.test_p2) ... ok
test_p3 (__main__.Test.test_p3) ... ERROR
test_p4 (__main__.Test.test_p4) ... ERROR
test_p5 (__main__.Test.test_p5) ... ERROR
test_p6 (__main__.Test.test_p6) ... ERROR

======================================================================
ERROR: test_p3 (__main__.Test.test_p3)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\User\Desktop\test\test1-ZIIAS1-1111.py", line 23, in test_p3
    self.assertEqual(p3.f(88077066),42)
                     ^^^^
AttributeError: module 'p3' has no attribute 'f'

======================================================================
ERROR: test_p4 (__main__.Test.test_p4)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\User\Desktop\test\test1-ZIIAS1-1111.py", line 26, in test_p4
    import p4
  File "c:\Users\User\Desktop\test\p4.py", line 14, in <module>
    print(f(23456))
          ^^^^^^^^
  File "c:\Users\User\Desktop\test\p4.py", line 4, in f
    if number %2 == 0:
       ~~~~~~~^~
TypeError: not all arguments converted during string formatting

======================================================================
ERROR: test_p5 (__main__.Test.test_p5)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\User\Desktop\test\test1-ZIIAS1-1111.py", line 30, in test_p5
    import p5
ModuleNotFoundError: No module named 'p5'

======================================================================
ERROR: test_p6 (__main__.Test.test_p6)
----------------------------------------------------------------------
Traceback (most recent call last):
  File "c:\Users\User\Desktop\test\test1-ZIIAS1-1111.py", line 34, in test_p6
    import p6
ModuleNotFoundError: No module named 'p6'

----------------------------------------------------------------------
Ran 6 tests in 0.027s

FAILED (errors=4)
